<resources>
    <string name="app_name">TeamManager</string>
    <string name="title_home">Home</string>
    <string name="title_eventos">Eventos</string>
    <string name="title_equipo">Equipo</string>
    <string name="jugadores">Jugadores</string>
    <string name="entrenadores">Entrenadores</string>
    <string name="foto_equipo">Foto equipo</string>
    <string name="title_perfil">Perfil</string>
    <string name="title_clasificacion">Clasificación</string>
    <string name="invitar">Invitar Compañeros</string>
    <string name="goles">Goles</string>
    <string name="asistencias">Asistencias</string>
    <string name="partidos">Partidos</string>
    <string name="rojas">Rojas</string>
    <string name="amarillas">Amarillas</string>
    <string name="icono_home">Icono Home</string>
    <string name="opciones_equipo">Opciones Equipo</string>
    <string name="pr_ximos_eventos">Próximos Eventos</string>
    <string name="registrarse">Registrarse</string>
    <string name="iniciar_sesion">Iniciar Sesión</string>
    <string name="email">Email</string>
    <string name="email_obligatorio">Email *</string>
    <string name="contrase_a">Contraseña</string>
    <string name="contrase_a_obligatorio">Contraseña *</string>
    <string name="repetir_contrasena">Repite la contraseña *</string>
    <string name="teammanager">TeamManager</string>
    <string name="registrarte_aqui">¡Registrarte aquí!</string>
    <string name="todavia_no_tienes_una_cuenta">¿Todavía no tienes una cuenta? </string>
    <string name="jugador">Soy un Jugador</string>
    <string name="entrenador">Soy un Entrenador</string>
    <string name="cual_ser_tu_rol_en_el_equipo">¿Cuál es tu Rol en el equipo?</string>
    <string name="siguiente">Siguiente</string>
    <string name="pa_s">País *</string>
    <string name="fecha_de_nacimiento">Fecha de nacimiento *</string>
    <string name="nombre_completo">Nombre completo *</string>
    <string name="nombre_completo_">Nombre completo</string>
    <string name="creaci_n_de_usuario">Creación de Usuario</string>
    <string name="fecha_formato">01/01/2000</string>
    <string name="crear_usuario">Crear Usuario</string>
    <string name="seleccionar_fecha">Seleccionar fecha</string>
    <string name="eliminacion_cuenta_mensaje">¿Estás seguro de querer eliminar tu cuenta con todos tus datos?</string>

    <string-array name="paises">
        <item>Afganistán</item>
        <item>Albania</item>
        <item>Alemania</item>
        <item>Andorra</item>
        <item>Angola</item>
        <item>Antigua y Barbuda</item>
        <item>Arabia Saudita</item>
        <item>Argelia</item>
        <item>Argentina</item>
        <item>Armenia</item>
        <item>Australia</item>
        <item>Austria</item>
        <item>Azerbaiyán</item>
        <item>Bahamas</item>
        <item>Bangladés</item>
        <item>Barbados</item>
        <item>Baréin</item>
        <item>Bélgica</item>
        <item>Belice</item>
        <item>Benín</item>
        <item>Bielorrusia</item>
        <item>Birmania</item>
        <item>Bolivia</item>
        <item>Bosnia y Herzegovina</item>
        <item>Botsuana</item>
        <item>Brasil</item>
        <item>Brunéi</item>
        <item>Bulgaria</item>
        <item>Burkina Faso</item>
        <item>Burundi</item>
        <item>Bután</item>
        <item>Cabo Verde</item>
        <item>Camboya</item>
        <item>Camerún</item>
        <item>Canadá</item>
        <item>Catar</item>
        <item>Chad</item>
        <item>Chile</item>
        <item>China</item>
        <item>Chipre</item>
        <item>Ciudad del Vaticano</item>
        <item>Colombia</item>
        <item>Comoras</item>
        <item>Corea del Norte</item>
        <item>Corea del Sur</item>
        <item>Costa de Marfil</item>
        <item>Costa Rica</item>
        <item>Croacia</item>
        <item>Cuba</item>
        <item>Dinamarca</item>
        <item>Dominica</item>
        <item>Ecuador</item>
        <item>Egipto</item>
        <item>El Salvador</item>
        <item>Emiratos Árabes Unidos</item>
        <item>Eritrea</item>
        <item>Eslovaquia</item>
        <item>Eslovenia</item>
        <item>España</item>
        <item>Estados Unidos</item>
        <item>Estonia</item>
        <item>Esuatini</item>
        <item>Etiopía</item>
        <item>Filipinas</item>
        <item>Finlandia</item>
        <item>Fiyi</item>
        <item>Francia</item>
        <item>Gabón</item>
        <item>Gambia</item>
        <item>Georgia</item>
        <item>Ghana</item>
        <item>Granada</item>
        <item>Grecia</item>
        <item>Guatemala</item>
        <item>Guinea</item>
        <item>Guinea-Bisáu</item>
        <item>Guinea Ecuatorial</item>
        <item>Guyana</item>
        <item>Haití</item>
        <item>Honduras</item>
        <item>Hungría</item>
        <item>India</item>
        <item>Indonesia</item>
        <item>Irak</item>
        <item>Irán</item>
        <item>Irlanda</item>
        <item>Islandia</item>
        <item>Islas Marshall</item>
        <item>Islas Salomón</item>
        <item>Israel</item>
        <item>Italia</item>
        <item>Jamaica</item>
        <item>Japón</item>
        <item>Jordania</item>
        <item>Kazajistán</item>
        <item>Kenia</item>
        <item>Kirguistán</item>
        <item>Kiribati</item>
        <item>Kosovo</item>
        <item>Kuwait</item>
        <item>Laos</item>
        <item>Lesoto</item>
        <item>Letonia</item>
        <item>Líbano</item>
        <item>Liberia</item>
        <item>Libia</item>
        <item>Liechtenstein</item>
        <item>Lituania</item>
        <item>Luxemburgo</item>
        <item>Madagascar</item>
        <item>Malasia</item>
        <item>Malaui</item>
        <item>Maldivas</item>
        <item>Malí</item>
        <item>Malta</item>
        <item>Marruecos</item>
        <item>Mauricio</item>
        <item>Mauritania</item>
        <item>México</item>
        <item>Micronesia</item>
        <item>Moldavia</item>
        <item>Mónaco</item>
        <item>Mongolia</item>
        <item>Montenegro</item>
        <item>Mozambique</item>
        <item>Namibia</item>
        <item>Nauru</item>
        <item>Nepal</item>
        <item>Nicaragua</item>
        <item>Níger</item>
        <item>Nigeria</item>
        <item>Noruega</item>
        <item>Nueva Zelanda</item>
        <item>Omán</item>
        <item>Países Bajos</item>
        <item>Pakistán</item>
        <item>Palaos</item>
        <item>Palestina</item>
        <item>Panamá</item>
        <item>Papúa Nueva Guinea</item>
        <item>Paraguay</item>
        <item>Perú</item>
        <item>Polonia</item>
        <item>Portugal</item>
        <item>Reino Unido</item>
        <item>República Centroafricana</item>
        <item>República Checa</item>
        <item>República del Congo</item>
        <item>República Democrática del Congo</item>
        <item>República Dominicana</item>
        <item>Ruanda</item>
        <item>Rumania</item>
        <item>Rusia</item>
        <item>Samoa</item>
        <item>San Cristóbal y Nieves</item>
        <item>San Marino</item>
        <item>San Vicente y las Granadinas</item>
        <item>Santa Lucía</item>
        <item>Santo Tomé y Príncipe</item>
        <item>Senegal</item>
        <item>Serbia</item>
        <item>Seychelles</item>
        <item>Sierra Leona</item>
        <item>Singapur</item>
        <item>Siria</item>
        <item>Somalia</item>
        <item>Sri Lanka</item>
        <item>Sudáfrica</item>
        <item>Sudán</item>
        <item>Sudán del Sur</item>
        <item>Suecia</item>
        <item>Suiza</item>
        <item>Surinam</item>
        <item>Tailandia</item>
        <item>Tanzania</item>
        <item>Tayikistán</item>
        <item>Timor Oriental</item>
        <item>Togo</item>
        <item>Tonga</item>
        <item>Trinidad y Tobago</item>
        <item>Túnez</item>
        <item>Turkmenistán</item>
        <item>Turquía</item>
        <item>Tuvalu</item>
        <item>Ucrania</item>
        <item>Uganda</item>
        <item>Uruguay</item>
        <item>Uzbekistán</item>
        <item>Vanuatu</item>
        <item>Venezuela</item>
        <item>Vietnam</item>
        <item>Yemen</item>
        <item>Yibuti</item>
        <item>Zambia</item>
        <item>Zimbabue</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="eliminacion_de_cuenta">Eliminación de cuenta</string>
    <string name="si">Si</string>
    <string name="no">No</string>
    <string name="cerrar_sesi_n">Cerrar Sesión</string>
    <string name="eliminar_cuenta">Eliminar Cuenta</string>
    <string name="quieres_unirte_a_un_equipo_existente_o_crear_uno_nuevo">¿Quieres unirte a un equipo existente o crear uno nuevo?</string>
    <string name="bienvenido">¡Bienvenido a TeamManager!</string>
    <string name="nombre_del_equipo">Nombre del equipo *</string>
    <string name="creaci_n_de_equipo">Creación de Equipo</string>
    <string name="nombre_del_equipo_">Nombre del equipo</string>
    <string name="ciudad">Ciudad</string>
    <string name="crear_equipo">Crear Equipo</string>
    <string name="dile_a_uno_de_tus_compa_eros_de_equipo_que_te_comparta_el_c_digo_de_su_equipo_para_poder_unirte_a_el">¡Dile a uno de tus compañeros que te comparta el código de su equipo para poder unirte a el!</string>
    <string name="pr_ximo_evento">Próximo evento del equipo</string>
    <string name="no_hay_pr_ximos_eventos">Ningún evento próximo encontrado :(</string>
    <string name="top_50_jugadores_con_m_s_goles_de_teammanager">Top 50 jugadores con más goles de TeamManager</string>
    <string name="f_nacimiento">F. Nacimiento</string>
    <string name="equipo">Equipo</string>
    <string name="nacionalidad">Nacionalidad</string>
    <string name="rol">Rol</string>
    <string name="alias">Alias</string>
    <string name="invitarrr">Invitar</string>
    <string name="a_adir_evento">Añadir evento</string>
    <string name="cancelar">Cancelar</string>
    <string name="guardar">Guardar</string>
    <string name="t_tulo_del_evento_">Título *</string>
    <string name="t_tulo_del_evento">Título</string>
    <string name="creaci_n_de_evento">Creación de evento</string>
    <string name="descripci_n_del_evento">Descripción</string>
    <string name="fecha">Fecha *</string>
    <string name="descripci_n">Descripción *</string>
    <string name="fecha_">Fecha</string>
    <string name="edad">Edad</string>
    <string name="actualizar">Actualizar</string>
    <string name="volver">Volver</string>
    <string name="edici_n_perfil">Edición Perfil</string>
    <string name="selecciona_una_im_gen_para_tu_perfil">Selecciona una imágen para tu perfil</string>
    <string name="opciones">Opciones</string>
    <string name="abandonar_equipo">Abandonar Equipo</string>
    <string name="son_necesarios_los_permisos_de_lectura_de_ficheros_para_poder_a_adir_una_im_gen_estas_seguro_de_rechazarlos">Son necesarios los permisos de lectura de ficheros para poder añadir una imágen. ¿Estas seguro de rechazarlos?</string>
</resources>