<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="net.pacofloridoquesada.teammanager.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/navigation_equipo"
        android:name="net.pacofloridoquesada.teammanager.ui.equipo.EquipoFragment"
        android:label="@string/title_equipo"
        tools:layout="@layout/fragment_equipo" />

    <fragment
        android:id="@+id/navigation_eventos"
        android:name="net.pacofloridoquesada.teammanager.ui.eventos.EventosFragment"
        android:label="@string/title_eventos"
        tools:layout="@layout/fragment_eventos" />
    <fragment
        android:id="@+id/navigation_clasificacion"
        android:name="net.pacofloridoquesada.teammanager.ui.clasificacion.ClasificacionFragment"
        android:label="fragment_clasificacion"
        tools:layout="@layout/fragment_clasificacion" />
    <fragment
        android:id="@+id/navigation_perfil"
        android:name="net.pacofloridoquesada.teammanager.ui.perfil.PerfilFragment"
        android:label="fragment_perfil"
        tools:layout="@layout/fragment_perfil" />
</navigation>