<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/beis_fondo"
    tools:context=".ui.register.UserCreationFragment">

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/repetir_contrasena"
        android:textColor="@color/azul_principal"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/etRepetirContrasenya"
        app:layout_constraintTop_toBottomOf="@+id/etContrasenyaCrear" />

    <EditText
        android:id="@+id/etRepetirContrasenya"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/bg_edittext"
        android:ems="10"
        android:hint="@string/contrase_a"
        android:inputType="textPassword"
        android:padding="12dp"
        android:textColor="@color/azul_principal"
        android:textColorHint="@color/azul_principal"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/etEmailCreacionUsu"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/etEmailCreacionUsu"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/contrase_a_obligatorio"
        android:textColor="@color/azul_principal"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/etContrasenyaCrear"
        app:layout_constraintTop_toBottomOf="@+id/etEmailCreacionUsu" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/email_obligatorio"
        android:textColor="@color/azul_principal"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/etEmailCreacionUsu"
        app:layout_constraintTop_toBottomOf="@+id/tvFechaNacimiento" />

    <EditText
        android:id="@+id/etContrasenyaCrear"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/bg_edittext"
        android:ems="10"
        android:hint="@string/contrase_a"
        android:inputType="textPassword"
        android:padding="12dp"
        android:textColor="@color/azul_principal"
        android:textColorHint="@color/azul_principal"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/etEmailCreacionUsu"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/etEmailCreacionUsu"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <EditText
        android:id="@+id/etEmailCreacionUsu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/bg_edittext"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        android:textColor="@color/azul_principal"
        android:textColorHint="@color/azul_principal"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/btSelectFecha"
        app:layout_constraintStart_toStartOf="@+id/tvFechaNacimiento"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/pa_s"
        android:textColor="@color/azul_principal"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/etNombreCompleto"
        app:layout_constraintTop_toBottomOf="@+id/etNombreCompleto" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/fecha_de_nacimiento"
        android:textColor="@color/azul_principal"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/tvFechaNacimiento"
        app:layout_constraintTop_toBottomOf="@+id/spPaises" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/nombre_completo"
        android:textColor="@color/azul_principal"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/etNombreCompleto"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/etNombreCompleto"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/bg_edittext"
        android:ems="10"
        android:hint="@string/nombre_completo_"
        android:inputType="textPersonName"
        android:padding="12dp"
        android:textColor="@color/azul_principal"
        android:textColorHint="@color/azul_principal"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="24dp"
        android:text="@string/creaci_n_de_usuario"
        android:textColor="@color/naranja_logo_complementario"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:src="@drawable/ic_logo_app"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_logo_app" />

    <Spinner
        android:id="@+id/spPaises"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/bg_edittext"
        android:padding="12dp"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:src="@drawable/arrow_down"
        app:layout_constraintBottom_toBottomOf="@+id/spPaises"
        app:layout_constraintEnd_toEndOf="@+id/spPaises"
        app:layout_constraintTop_toTopOf="@+id/spPaises" />

    <Button
        android:id="@+id/btCrearUser"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/bg_simple_button"
        android:text="@string/crear_usuario"
        android:textAllCaps="false"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btSelectFecha"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/bg_simple_button"
        android:text="@string/seleccionar_fecha"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:icon="@drawable/baseline_calendar_month_24"
        app:layout_constraintBottom_toBottomOf="@+id/tvFechaNacimiento"
        app:layout_constraintEnd_toEndOf="@+id/spPaises"
        app:layout_constraintStart_toEndOf="@+id/tvFechaNacimiento"
        app:layout_constraintTop_toTopOf="@+id/tvFechaNacimiento" />

    <TextView
        android:id="@+id/tvFechaNacimiento"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/bg_edittext"
        android:padding="12dp"
        android:textColor="@color/azul_principal"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/btSelectFecha"
        app:layout_constraintStart_toStartOf="@+id/spPaises"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        tools:text="dd/MM/yyyy" />

</androidx.constraintlayout.widget.ConstraintLayout>